<resources>
    <string name="app_name">Foodie</string>
    <string name="password_contentDescription">Password text field</string>
    <string name="username_placeholder">Username</string>
    <string name="register_button_text">Register</string>
    <string name="usernameTextView">Username:</string>
    <string name="passwordTextView">Password:</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login">Login</string>
    <string name="foodie_main_image">foodie main image</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="no_account">Create an account</string>


    <string name="foodie">Foodie</string>
    <string name="welcome_name">Welcome, [name]</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="description">Description</string>
    <string name="restaurant_activity_name">Restaurant name</string>
    <string name="restaurant_activity_description">Restaurant description</string>
    <string name="food_name">Food name</string>
    <string name="food_description">Food description</string>
    <string name="price">Price</string>
    <string name="plus_sign">+</string>
    <string name="cart">Cart</string>
    <string name="Cart">Cart</string>
    <string name="order">Order</string>
    <string name="total">Total:</string>

    <string-array name="restaurants_names">
        <item>Sunshine Diner</item>
        <item>Comfort Food</item>
        <item>The Dinner Table</item>
        <item>Little Italy</item>
        <item>Burrito Belly</item>
        <item>Delicioso</item>
        <item>Atomic Sushi</item>
        <item>Cool Tofu</item>
        <item>Little Italy</item>
        <item>Burrito Belly</item>
        <item>Delicioso</item>
        <item>Atomic Sushi</item>
        <item>Cool Tofu</item>
        <item>Little Italy</item>
        <item>Burrito Belly</item>
        <item>Delicioso</item>
        <item>Atomic Sushi</item>
        <item>Cool Tofu</item>
    </string-array>

    <string-array name="restaurants_descriptions">
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
        <item>nice restaurant</item>
    </string-array>

    <string-array name="foods_names">
        <item>pizza</item>
        <item>sushi</item>
        <item>spaghetti</item>
        <item>burger</item>
        <item>pasta</item>
    </string-array>

    <string-array name="foods_descriptions">
        <item>yummy food</item>
        <item>yummy food</item>
        <item>yummy food</item>
        <item>yummy food</item>
        <item>yummy food</item>
    </string-array>

    <string-array name="prices">
        <item>20.99</item>
        <item>30.99</item>
        <item>17.99</item>
        <item>13.99</item>
        <item>20.99</item>
    </string-array>
</resources>
