<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/foodie_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/foodie_main_image" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/create_a_new_account"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="86dp"
        android:layout_height="27dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/usernameText"
        android:text="@string/usernameTextView"
        android:textColor="@color/white"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:textColor="@color/white"

        android:id="@+id/sendButton"
        android:layout_width="147dp"
        android:layout_height="57dp"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="86dp"
        android:layout_height="27dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/passwordText"

        android:text="@string/passwordTextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="211dp"
        android:layout_height="49dp"
        android:autofillHints=""

        android:contentDescription="@string/password_contentDescription"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/foodieLabel"
        android:layout_width="154dp"

        android:layout_height="61dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/foodie"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/loginLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/alreadyAccText"
        android:layout_width="313dp"
        android:layout_height="36dp"
        android:clickable="true"
        android:elegantTextHeight="true"
        android:focusable="true"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorLink="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendButton"
        app:layout_constraintVertical_bias="0.151" />


</androidx.constraintlayout.widget.ConstraintLayout>