<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sendButton"
        android:layout_width="138dp"
        android:layout_height="77dp"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="86dp"
        android:layout_height="27dp"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/usernameText"
        android:text="@string/usernameTextView"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="86dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/passwordText"
        android:text="@string/passwordTextView"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="211dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:contentDescription="@string/password_contentDescription"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

</androidx.constraintlayout.widget.ConstraintLayout>