<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:id="@+id/parentView">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/foodie_main_image"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/foodie_main"
        app:layout_constraintBottom_toBottomOf="@id/parentView"
        app:layout_constraintEnd_toEndOf="@id/parentView"
        app:layout_constraintTop_toTopOf="@id/parentView"
        app:layout_constraintVertical_bias="0.0" />


        <EditText
            android:id="@+id/usernameText"
            android:layout_width="213dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/login"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/sendButton"

        android:layout_width="147dp"
        android:layout_height="57dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <EditText
            android:id="@+id/passwordText"
            android:layout_width="211dp"
            android:layout_height="49dp"
            android:autofillHints=""

            android:contentDescription="@string/password_contentDescription"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_light"

        android:labelFor="@+id/passwordText"
        android:text="@string/passwordTextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_light"
        android:labelFor="@+id/usernameText"
        android:text="@string/usernameTextView"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/foodieLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/foodie"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/loginLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41" />


    <TextView
        android:id="@+id/noAccText"
        android:layout_width="314dp"
        android:layout_height="67dp"
        android:layout_marginBottom="84dp"
        android:clickable="true"
        android:elegantTextHeight="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendButton"
        app:layout_constraintVertical_bias="0.477" />

</androidx.constraintlayout.widget.ConstraintLayout>
